# repositories-manager

./: CMakeLists.txt  README.md  meson.build
data/: CMakeLists.txt  com.github.bartzaalberg.repositories-manager.appdata.xml  com.github.bartzaalberg.repositories-manager.desktop  com.github.bartzaalberg.repositories-manager.pkexec.policy  com.github.bartzaalberg.repositories.appdata.xml  com.github.bartzaalberg.repositories.desktop  com.github.bartzaalberg.repositories.gschema.xml  com.github.bartzaalberg.repositories.pkexec.policy
debian/: changelog  control
src/: Application.vala  CommandHandler.vala  ConfigFileReader.vala  Constants.vala  ListBox.vala  ListBoxRow.vala  ListManager.vala  MainWindow.vala  StackManager.vala
src/Components/: HeaderBar.vala
src/Dialogs/: AddRepository.vala  Alert.vala  DeleteConfirm.vala  EditRepository.vala  Preferences.vala
src/Polkit/: Application.vala
src/Views/: AddBookmark.vala  EditBookmark.vala  ListBookmarks.vala  ListView.vala
src/WizardApplication/: WizardApplication.vala
